@@ -12,4 +12,4 @@ disk file named \fIs\fR, and returns 1.
 If something goes wrong, io_readfile sets \fIerrno\fR to indicate the error, and
 returns 0; it does not create a new descriptor, and it does not touch d.
 .SH "SEE ALSO"
-io_createfilefile(3), io_appendfile(3), io_readwritefile(3)
+io_createfile(3), io_appendfile(3), io_readwritefile(3)
